# ragos-installer

./: Cargo.toml  README.md  package-lock.json  package.json  ragos-installer-ui.nix  vite.config.js
src/: App.jsx  index.css  main.rs
src/components/: TimezoneMap.jsx
src/data/: timezoneRegions.js
src/pages/: Disks.jsx  Eula.jsx  Install.jsx  Localization.jsx  Network.jsx  Summary.jsx  Timezone.jsx  Users.jsx
static/: index.html
static/assets/: index-mrlHezbk.css  index-uAKJvSKO.js
